set starter code for class 19

--- a/garden-planning-tool/src/App.css
+++ b/garden-planning-tool/src/App.css
@@ -1,35 +1,4 @@
-body {
-  background-image: url("./assets/images/bkg.jpg");
-  background-attachment: fixed;
-  font-family: "Karla", sans-serif;
-  font-size: 14pt;
-  font-weight: 400;
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-div {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-h2 {
-  font-family: "Unica One", cursive;
-  font-size: 32px;
-  margin: 0;
-}
-
-h3 {
-  color: #508015;
-  font-family: "Karla", sans-serif;
-  font-size: 24px;
-  text-transform: uppercase;
-  margin-top: 0;
-  border-bottom: 2px solid #508015;
-}
+/* CSS here is also global but I've put most of it in index.css */
 
 #page-layout {
   flex-direction: column;
