--- a/garden-planning-tool/src/App.css
+++ b/garden-planning-tool/src/App.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   background-color: white;
   height: 100%;
+  min-height: 100vh;
   width: 80vw;
   margin: 0 5vw 0 15vw;
 }
